# drey

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  drey-PRD-v0_8.md
.github/workflows/: ci.yml
docs/specs/: m0-fixture-harness.md  m2-durability.md  m3-findings.md  open-questions-ledger.md  persistence-seam-decision.md
drey/: Cargo.toml
drey/src/: config.rs  error.rs  export.rs  graph.rs  interner.rs  lib.rs  mutation.rs  persist.rs  query.rs  read.rs  similarity.rs  store.rs  traverse.rs  types.rs
drey/src/persist/: codec.rs  mod.rs
drey/tests/: m1_invariants.rs  m2_persistence.rs
harness/: Cargo.toml
harness/src/: canonical.rs  driver.rs  fixture.rs  generator.rs  lib.rs  output.rs  params.rs  rng.rs  runner.rs  workload.rs
specs/: m0-fixture-harness.md  m0-implementation-checklist.md  m2-durability.md  m3-findings.md  m5-query-seam-decision.md  open-questions-ledger.md  persistence-seam-decision.md  shortest-path-bound.md
